no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3004,13 +3004,16 @@ createSign(STR)                                 #Same as createDecipher() but fo
                                                 #  - saltLength NUM, can be:
                                                 #     - CRYPTO.constants.RSA_PSS_SALTEN_DIGEST: digest size
                                                 #     - CRYPTO.constants.RSA_PSS_SALTEN_MAX_SIGN
-                                                #  - dsaEncoding 'der' (def) or 'ieee-p1363'
+                                             13*#  - dsaEncoding 'der' (def) or 'ieee-p1363'
 createVerify(STR)                               #Same for verifying algo STR.
                                                 #Like createSign(), is only a OSTREAM.
 VERIFY.verify                                   #Read from createVerify()
  (SBUFFER|KEY|OBJ, STDBUFFER[,ENCODING])        #SBUFFFER is a certificate or a RSA|DSA public key in PEM format
                                              11*#or a private key
-                                                #OBJ: padding, saltLength, dsaEncoding
+                                                #OBJ:
+                                                #  - padding
+                                                #  - saltLength
+                                             13*#  - dsaEncoding
                                                 #STDBUFFER is the signature.
 sign(['ALGO, ']STDBUFFER2, SBUFFER|KEY|OPTS)
  ->BUFFER
