no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1521,6 +1521,7 @@ array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index
                                   #OBJ: allowImplicit BOOL: if false (def), forbid "return" with no VAL
 unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf()
 unicorn/prefer-flat-map          ##Prefer ARR.flatMap() over ARR.map().flat()
+unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
@@ -1546,6 +1547,7 @@ no-template-curly-in-string       #Avoid ${} inside "" or ''
 
 unicorn/*                        ##Module "eslint-plugin-unicorn" (13.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
+unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
 
 unicorn/no-hex-escape            ##Avoid \x... (prefer \u....)
@@ -1865,7 +1867,9 @@ import/no-restricted-paths [OBJ] ##Blacklists import|require of any file inside 
                                  ##  - zones OBJ_ARR: target DIR2, from DIR
                                  ##  - basePath DIR3 (def: $PWD): of DIR2|DIR
 
-unicorn/import-index             ##Avoid import|require of index.js with './index.js' or 'DIR/'. Prefer 'DIR'
+unicorn/import-index [OBJ]       ##Avoid import|require of index.js with './index.js' or 'DIR/'. Prefer 'DIR'
+                                 ##OBJ:
+                                 ##  - ignoreImports BOOL (def: false): require() only, not import
 
 
                                              /=+===============================+=\
