no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.15.2)
+react/*                          ##Node module "eslint-plugin-react" (7.16.0)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -668,6 +668,7 @@ react/no-unsafe                  ##Avoid UNSAFE_* methods
 react/jsx-no-target-blank [OBJ]  ##<a target="_blank"> must be accompanied by rel="noreferrer noopener"
                                  ##OBJ:
                                  ##  - enforceDynamicLinks 'always' (def) or 'never': whether to enforce it when URI is JSX
+                                 ##  - allowReferrer BOOL: if false (def), requires noreferrer
 
 react/jsx-key [OBJ]              ##Must use "key" when needed
                                  ##OBJ:
@@ -807,8 +808,8 @@ react/jsx-closing-bracket-       ##Where to put /> or </
                                  ##  - nonEmpty (inverse)
                                  ##STR is shorthand for both
 react/jsx-closing-tag-location   ##Closing tag must be on same line as opening tag, or vertically aligned with it
-react/jsx-first-prop-new-        ##Newline before first PROP, among:
- line [STR]                      ##  - 'never'
+react/jsx-first-prop-new-line    ##Newline before first PROP, among:
+ [STR]                           ##  - 'never'
                                  ##  - 'always'
                                  ##  - 'multiline': if JSX is multiline
                                  ##  - 'multiline-multiprop': if JSX is multiline and has several PROPs
@@ -826,15 +827,16 @@ react/jsx-one-expression-per-line##Avoid two <RTYPE> on same line
 react/self-closing-comp [OBJ]    ##Must use <RTYPE /> if there is no child
                                  ##For OBJ: component|html BOOL (def: true, false) (non-RDOM, RDOM)
 
-react/jsx-no-duplicate-          ##Prevents duplicate PROPs
- props [OBJ]                     ##OBJ: ignoreCase BOOL (def: false)
-react/jsx-max-props-per-         ##Max PROPs per line
- line [OBJ]                      ##OBJ:
+react/jsx-no-duplicate-props     ##Prevents duplicate PROPs
+ [OBJ]                           ##OBJ: ignoreCase BOOL (def: false)
+react/jsx-max-props-per-line     ##Max PROPs per line
+ [OBJ]                           ##OBJ:
                                  ##  - maximum NUM (def: 1)
                                  ##  - when STR: 'always' (def) or 'multiline' (only checks if multiline JSX)
 react/jsx-props-no-spreading     ##Forbids <RTYPE {...PROPS}>
  [OBJ]                           ##OBJ:
                                  ##  - custom|html 'enforce' (def) or 'ignore': for [non-]RDOM
+                                 ##  - explicitSpread 'enforce' (def) or 'ignore': if 'ignore', allow if PROPS is a literal OBJ
                                  ##  - exceptions 'RTYPE'_ARR
 react/jsx-max-depth [OBJ]        ##Max nesting OBJ.max NUM (def: 2)
 
@@ -851,6 +853,8 @@ react/jsx-handler-names [OBJ]    ##Requires PROPs naming for:
                                  ##  - event handlers PROP: start with OBJ.eventHandlerPropPrefix STR|BOOL (def: 'on')
                                  ##  - event handlers PROP's value: start with OBJ.eventHandlerPrefix STR|BOOL (def: 'handle')
                                  ##E.g. onChange={this.handleChange}
+                                 ##OBJ:
+                                 ##  - checkLocalVariables BOOL (def: false): check event handlers stored as local variables too
 react/jsx-sort-props             ##Requires sorting PROPs
                                  ##OBJ:
                                  ##  - noSortAlphabetically BOOL (def: false)
