no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1322,17 +1322,17 @@ DATETIMEFORMAT.formatRange
 DATETIMEFORMAT.formatRangeToParts
  (DATE, DATE2)->STR                     12*-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
 
-new Intl.RelativeTimeFormat([LOCALEOPTS]) *-|||~#Date|Time|Date+Time locale formatting, for relative time ("time ago")
-                                          *-|||~#OPTS:
-                                          *-|||~#  - style STR:
-                                          *-|||~#     - 'long' (def) ("in 1 month")
-                                          *-|||~#     - 'short' ("in 1 mo.")
-                                          *-|||~#     - 'narrow' ("in 1 mo.")
-                                          *-|||~#Ponyfill yahoo 'intl-relativeformat'
-RELATIVETIMEFORMAT.format(NUM, STR)->STR2 *-|||~#STR: 'year|quarter|month|week|day|hour|minute|second'
-RELATIVETIMEFORMAT.formatToParts(NUM, STR)*-|||~#OBJ_ARR:
- ->OBJ_ARR                                *-|||~#  - type STR: like unit (e.g. "year") or "literal" (anything else)
-                                          *-|||~#  - value STR
+new Intl.RelativeTimeFormat([LOCALEOPTS])  *-|||#Date|Time|Date+Time locale formatting, for relative time ("time ago")
+                                           *-|||#OPTS:
+                                           *-|||#  - style STR:
+                                           *-|||#     - 'long' (def) ("in 1 month")
+                                           *-|||#     - 'short' ("in 1 mo.")
+                                           *-|||#     - 'narrow' ("in 1 mo.")
+                                           *-|||#Ponyfill yahoo 'intl-relativeformat'
+RELATIVETIMEFORMAT.format(NUM, STR)->STR2  *-|||#STR: 'year|quarter|month|week|day|hour|minute|second'
+RELATIVETIMEFORMAT.formatToParts(NUM, STR) *-|||#OBJ_ARR:
+ ->OBJ_ARR                                 *-|||#  - type STR: like unit (e.g. "year") or "literal" (anything else)
+                                           *-|||#  - value STR
 
 new Intl.PluralRules([LOCALEOPTS])             -#Locale-specific plural group of a NUM
                                                -#OPTS:
@@ -1598,6 +1598,9 @@ Atomics.wait                                 9*-#Wait until Atomics.notify(), pr
                                              9*-#  - otherwise:
                                              9*-#     - wait until Atomics.notify() (STR is "ok")
                                              9*-#     - or until timeout NUM2ms (STR is "timed-out")
+Atomics.waitAsync
+ (S_INT32_ARR, NUM, VAL[, NUM2])
+ ->PROMISE_STR                               *-~#Same but async
 Atomics.notify(S_INT32_ARR, NUM, NUM2)       9*-#Wake up NUM2 workers Atomics.waiting, with same first two arguments
 
 Atomics.isLockFree(S_ARRBUFFER, NUM)->BOOL   9*-#True if underlying hardware can avoid locks for S_ARRBUFFER in a typed array
