no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -911,7 +911,7 @@ TEST ? VAL1 : VAL2                              #Returns VAL1 or VAL2
 
 VAL && VAL2                                     #Same as VAL ? VAL : VAL2
 VAL || VAL2                                     #Same as VAL ? VAL2 : VAL
-VAL ?? VAL2                                 *-|~#Same as VAL == null ? VAL : VAL2
+VAL ?? VAL2                                  *-|#Same as VAL == null ? VAL : VAL2
 
 VAL1, VAL2                                      #Evaluates both, but returns VAL2.
                                                 #Use case: in for or while loops.
