no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.2.0 (current), 12.13.1 (active LTS), 10.17.0 (active LTS), 8.16.2 (active LTS)
+VERSION ==>                                     #13.3.0 (current), 12.13.1 (active LTS), 10.17.0 (active LTS), 8.16.2 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1434,6 +1434,7 @@ HTTPSERVER                                      #Child of TCPSERVER
 createServer([OPTS, ][FUNC()])->HTTPSERVER      #FUNC is 'request' event handler
                                                 #OPTS:
                                                 #  - IncomingMessage|ServerResponse FUNC: to replace constructors of REQ|RES
+                                             13*#  - maxHeaderSize NUM: see --max-http-header-size
 HTTPSERVER.on("request", FUNC(REQ, RES))        #Fired on client request
 HTTPSERVER.on("checkContinue", FUNC(REQ, RES))  #Fired on client request with Expect: 100-continue [C]
                                                 #If request is ok, should use RES.writeContinue() to sends a 100 status code
@@ -1564,6 +1565,7 @@ request(['URI'|URI][, OBJ][, FUNC(REQ)])        #Sends a HTTP request.
                                                 #  - createConnection(...): see AGENT
                                                 #  - timeout NUM
                                                 #  - lookup(...) (def: DNS.lookup(...))
+                                             13*#  - maxHeaderSize NUM: see --max-http-header-size
                                                 #FUNC is 'response' event handler.
 get(['URI'|URI][, OBJ][, FUNC(REQ)])            #Same but use method "GET" and automatically calls OSTREAM.end()
 CLIENTREQ.on("socket", FUNC(TCPSOCKET))         #Fired when socket is created to send the request.
@@ -1971,15 +1973,10 @@ rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
                                              12*#  - recursive BOOL (def: false):
                                              12*#     - recursively on children
                                              12*#     - no error if PATH does not exist
-                                             12*#  - emfileWait NUM (def: 1000)
-                                             12*#     - retry with linear backoff (starting at 1ms, ending at NUMms) on
-                                             12*#       EMFILE (too many open files)
-                                             12*#     - requires OPTS.recursive true
-                                             12*#  - maxBusyTries NUM (def: 3)
-                                             12*#     - retry NUM times with linear backoff (starting at 100ms) on
-                                             12*#       EBUSY, ENOTEMPTY or EPERM
-                                             12*#     - reason: some anti-virus software on Windows lock directories while running
-                                             12*#     - requires OPTS.recursive true
+                                             13*#  - maxRetries NUM (def: 0)
+                                             13*#     - retry NUM times with linear backoff (starting at 100ms) on
+                                             13*#       EBUSY, ENOTEMPTY, EPERM, EMFILE or ENFILE
+                                             13*#     - requires OPTS.recursive true
 
 FS-EXTRA.remove(FILE|DIR, FUNC(ERROR))         ##Like rm -rf
 WRENCH.rmdirSyncRecursive(FILE|DIR[, BOOL])    ##Same. If true, fails silently.
@@ -2348,9 +2345,10 @@ SIGNALS ==>                                     #Node specifics:
                                                 #     - SIGHUP: closing cmd.exe window
                                                 #     - SIGWINCH, SIGILL, SIGABRT, SIGFPE, SIGSEGV
 
-kill(PID_INT[, 'SIGNAME'|SIGNUM])               #Sends a signal (def: "SIGTERM").
+kill(PID_INT[, 'SIGNAME'|SIGNUM])->BOOL         #Sends a signal (def: "SIGTERM").
                                                 #If PID_INT doesn't exist, throw exception (can use 0 to just test process existence).
                                                 #If PID_INT is negative, targets also descendants (Unix only)
+                                                #Return true if succeeded
 OS.constants.signals.SIGNAME                    #SIGNUM
                                                 #SIGNAME is OS-agnostic, SIGNUM is OS-specific
                                                 #All OS miss SIGEMT SIGCLD SIGRTMIN SIGRTMAX
