no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -91,7 +91,7 @@ ALTERNATIVES ==>                  #Must choose either:
                                              \=+===============================+=/
 
 
-VERSION ==>                       #3.4.8
+VERSION ==>                       #3.5.0
 
 require('core-js')                #Polyfills all
                                   #Prints some annoying messages on postinstall unless ENVVAR ADBLOCK set
@@ -946,6 +946,9 @@ math/seeded-prng                  #
 math/signbit                      #
 math/umulh                        #
 number/from-string                #
+object/iterate-entries            #
+object/iterate-keys               #
+object/iterate-values             #
 observable                        #
 promise/try                       #
 set/add-all                       #
