no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1695,13 +1695,14 @@ import/*                         ##Node module "eslint-plugin-import
                                  ##  - import/core-modules 'MDL'_ARR:
                                  ##     - ignore those 'MDL'
                                  ##     - resolvers include their own list of core modules
-                                 ##  - import/external-module-folders 'PATH'_ARR (def: ['node_modules']): libraries
+                                 ##  - import/external-module-folders 'PATH'_ARR (def: ['node_modules']): external libraries
+                                 ##  - import/internal-regexp 'REGEXP': internal libraries in a monorepo setup. Matched against package name
                                  ##  - import/parsers.PARSER '.EXT'_ARR: use a different CONF.parser for those files
                                  ##  - import/resolver RESOLVER or { RESOLVER: RESOLVER_OPTS }
                                  ##     - uses package eslint-import-resolver-RESOLVER
                                  ##     - resolvers do preprocessing each imported path
                                  ##     - available:
-                                 ##        - webpack (0.11.1), with RESOLVER_OPTS: config STR|OBJ (def: use webpack.config.js), env ENV
+                                 ##        - webpack (0.11.2), with RESOLVER_OPTS: config STR|OBJ (def: use webpack.config.js), env ENV
                                  ##        - node (0.3.2), with RESOLVER_OPTS:
                                  ##           - extensions '.EXT'_ARR
                                  ##           - paths STR_ARR (like NODE_PATH)
@@ -1784,12 +1785,15 @@ import/no-relative-parent-imports##Avoid '../DIR|FILE'
 import/no-useless-path-segments  ##Avoid import|require with paths that could be normalized, e.g. '.../../', duplicate slashes
  [OBJ]                           ##or trailing slashes
                                  ##OBJ:
-                                 ##  - noUselessIndex (def: false): no 'index.js' filenames
+                                 ##  - noUselessIndex BOOL (def: false): no 'index.js' filenames
+                                 ##  - commonjs BOOL (def: false): for require() too
 
 no-duplicate-imports [OBJ]        #Avoid duplicate module imports, e.g. import ... from 'MDL'; import ... from 'MDL';
                                   #OBJ: includeExports BOOL (def: false): also forbids
                                   #import ... from 'MDL'; export ... from 'MDL';
-import/no-duplicates             ##Avoid import|require of twice the same file
+import/no-duplicates [OBJ]       ##Avoid import|require of twice the same file
+                                 ##OBJ:
+                                 ##  - considerQueryString BOOL (def: false)
 import/export                    ##Avoid exporting several times the same VAR
 import/no-self-import            ##Must not import|require itself
 import/no-cycle [OBJ]            ##Must not import|require circular dependencies
@@ -1801,10 +1805,10 @@ import/no-cycle [OBJ]            ##Must not import|require circular dependencies
 import/group-exports             ##Must use a single export|module.exports declaration
 
 import/no-extraneous-dependencies##Avoid import|require of external dependencies not declared in package.json's
- [OBJ]                           ##dependencies|devDependencies|optionalDependencies|peerDependencies
+ [OBJ]                           ##dependencies|devDependencies|optionalDependencies|peerDependencies|bundledDependencies
                                  ##OBJ:
-                                 ##  - devDependencies|optionalDependencies|peerDependencies BOOL (def: true, true, false)
-                                 ##    or GLOB_ARR (which files can use them)
+                                 ##  - devDependencies|optionalDependencies|peerDependencies|bundledDependencies BOOL
+                                 ##    (def: true, true, false, true) or GLOB_ARR (which files can use them)
                                  ##  - packageDir DIR[_ARR]: package.json directory
 node/no-extraneous-require [OBJ] ##Avoid require('MDL') if 'MDL' is not declared in package.json
                                  ##OBJ: allowModules (see above)
@@ -1843,8 +1847,14 @@ import/order [OBJ]               ##Must order import|require
                                  ##     - 'index': './'
                                  ##     - 'internal': 'DIR/...'
                                  ##     - 'unkown': anything else that might happen when using loaders, e.g. '!...'
+                                 ##  - pathGroups OBJ_ARR: add specific files to groups:
+                                 ##     - group 'GROUP'
+                                 ##     - pattern 'GLOB'
+                                 ##     - patternOptions OBJ: minimatch options
+                                 ##     - position 'before|after' (def: inside group)
                                  ##  - newlines-between STR: newlines between import|require, among 'always' (between groups),
                                  ##    'always-and-inside-groups' (between any import|require), 'never', 'ignore' (def)
+                                 ##  - alphabetize.order 'asc', 'desc' or 'ignore' (def): alphabetical sorting within each group
 import/newline-after-import [OBJ]##Must have OBJ.count NUM (def: 1) newlines after last import|require
 
 import/unambiguous               ##Make sure file types matches parserOptions.sourceType 'script|module'
@@ -1856,6 +1866,7 @@ import/no-dynamic-require        ##Avoid require(STR) where STR is computed, i.e
 import/no-commonjs [OBJ]         ##Avoid require() or module.exports
                                  ##OBJ:
                                  ##  - allowRequire BOOL (def: false): allow require()
+                                 ##  - allowConditionalRequire BOOL (def: true): allow require() inside if
                                  ##  - allowPrimitiveModules BOOL (def: false): allow module.exports = non-OBJ|FUNC
 import/no-amd                    ##Avoid AMD defined|require()
 
