no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -91,7 +91,7 @@ ALTERNATIVES ==>                  #Must choose either:
                                              \=+===============================+=/
 
 
-VERSION ==>                       #3.5.0
+VERSION ==>                       #3.6.0
 
 require('core-js')                #Polyfills all
                                   #Prints some annoying messages on postinstall unless ENVVAR ADBLOCK set
@@ -765,6 +765,8 @@ regexp/match                      #
 regexp/replace                    #
 regexp/search                     #
 regexp/split                      #
+regexp/sticky                     #
+regexp/test                       #
 regexp/to-string                  #
 set                               #
 string/anchor                     #
