no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.7.2
+VERSION ==>                       #6.8.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -30,7 +30,7 @@ SELECTOR                          #CSS-like but for ESTree:
 
 CONFIGURATION ==>                 #Can be from:
                                   #  - eslint --config|-c FILE
-                                  #  - ./[../.../].eslintrc.js|y[a]ml|json: JavaScript, YAML or JSON
+                                  #  - ./[../.../].eslintrc.js|cjs|y[a]ml|json: JavaScript, YAML or JSON
                                   #  - PACKAGE.JSON.eslintConfig OBJ
                                   #If there are several (e.g. ./.eslintrc.js and ../.eslintrc.js), merges them.
 
@@ -60,7 +60,7 @@ eslint --init                     #Create ./.eslintrc using interactive prompt
                                              \=+===============================+=/
 
 
-eslint FILE|DIR...                #
+eslint 'FILE|DIR_GLOB'...         #
 eslint --stdin                    #
 eslint --stdin-filename FILE      #
 
@@ -78,6 +78,9 @@ eslint --no-ignore                #Do not use .eslintignore
 CONF.ignorePatterns               #'PATTERN'_ARR. Like .eslintignore
 
 eslint --ext EXT,...              #File extensions (def: .js)
+
+eslint
+ --no-error-on-unmatched-pattern  #Do not error when 'GLOB' does not match anything
 
 
                                              /=+===============================+=\
